
  * New upstream release: QtWebKit 2.3 is a backport of QtWebkit for
    Qt 5 to Qt 4
  * Update patches:
    - remove Fix_build_with_GLib_2.31_changeset_r97269, applied upstream
    - remove upstream_changeset_r93631.diff, applied upstream
    - remove upstream_changeset_r113848.diff, applied upstream 
    - remove upstream_Build-fixes-for-glib-2.31.diff, applied upstream

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Jun 2014 21:18:08 +0200

qtwebkit (2.2.1-7.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Ignore warnings introduced by GCC 4.9. Closes: #746907.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Aug 2014 13:23:55 +0200

qtwebkit (2.2.1-7) unstable; urgency=low

  [ Nobuhiro Iwamatsu ]
  * Fix build on Renesas sh4, using -gstabs instead of -g. (Closes: #694773)

  [ Pino Toscano ]
  * Fix build on m68k, using -gstabs instead of -g. (Closes: #717685)

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Add myself to Uploaders.
  * Update symbols file.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 04 Nov 2013 22:15:25 -0300

qtwebkit (2.2.1-6) unstable; urgency=low

  * Avoid auto_clean error when building with --git-overlay.
  * New patch: ignore-unused-local-typedefs_error.diff. (Closes: #701345)
  * New patch: upstream_Build-fixes-for-glib-2.31.diff.
  * Add missing misc:Pre-Depends.
  * Update libqtwebkit4 symbols file.
  * Update vcs fields.
  * Add myself to uploaders.
  * Bump Standards-Version to 3.9.4.
  * Update copyright file.
  * Add m-a same to the dbg package.

 -- Maximiliano Curia <maxy@debian.org>  Thu, 27 Jun 2013 17:19:31 +0200

qtwebkit (2.2.1-5) unstable; urgency=low

  * Team upload.
  * Re upload the package to fix the M-A uninstallability due to a binNMU
    (Closes: #676162).
  * This upload will get rebuilt with xz compression (Closes: #687036).
    Thanks Ansgar Burchardt for the patch.
  * Rewrite debian/copyright to DEP-5 (Closes: #673268).