@@ -1,37 +1,0 @@
-usr/include/qt4/QtWebKit/QGraphicsWebView
-usr/include/qt4/QtWebKit/QWebDatabase
-usr/include/qt4/QtWebKit/QWebElement
-usr/include/qt4/QtWebKit/QWebElementCollection
-usr/include/qt4/QtWebKit/QWebFrame
-usr/include/qt4/QtWebKit/QWebHistory
-usr/include/qt4/QtWebKit/QWebHistoryInterface
-usr/include/qt4/QtWebKit/QWebHistoryItem
-usr/include/qt4/QtWebKit/QWebHitTestResult
-usr/include/qt4/QtWebKit/QWebInspector
-usr/include/qt4/QtWebKit/QWebPage
-usr/include/qt4/QtWebKit/QWebPluginFactory
-usr/include/qt4/QtWebKit/QWebSecurityOrigin
-usr/include/qt4/QtWebKit/QWebSettings
-usr/include/qt4/QtWebKit/QWebView
-usr/include/qt4/QtWebKit/QtWebKit
-usr/include/qt4/QtWebKit/ViewportAttributes
-usr/include/qt4/QtWebKit/qgraphicswebview.h
-usr/include/qt4/QtWebKit/qwebdatabase.h
-usr/include/qt4/QtWebKit/qwebelement.h
-usr/include/qt4/QtWebKit/qwebframe.h
-usr/include/qt4/QtWebKit/qwebhistory.h
-usr/include/qt4/QtWebKit/qwebhistoryinterface.h
-usr/include/qt4/QtWebKit/qwebinspector.h
-usr/include/qt4/QtWebKit/qwebkitglobal.h
-usr/include/qt4/QtWebKit/qwebkitplatformplugin.h
-usr/include/qt4/QtWebKit/qwebkitversion.h
-usr/include/qt4/QtWebKit/qwebpage.h
-usr/include/qt4/QtWebKit/qwebpluginfactory.h
-usr/include/qt4/QtWebKit/qwebsecurityorigin.h
-usr/include/qt4/QtWebKit/qwebsettings.h
-usr/include/qt4/QtWebKit/qwebview.h
-usr/lib/*/libQtWebKit.prl
-usr/lib/*/libQtWebKit.so
-usr/lib/*/pkgconfig/QtWebKit.pc
-usr/lib/*/qt4/plugins/designer/libqwebview.so
-usr/share/qt4/mkspecs/modules/qt_webkit_version.pri
