@@ -1,2 +1,0 @@
-usr/lib/*/qt4/imports/QtWebKit/libqmlwebkitplugin.so
-usr/lib/*/qt4/imports/QtWebKit/qmldir
