@@ -7,6 +7,8 @@ qtwebkit (2.3.2-0) UNRELEASED; urgency=medium
     - remove upstream_changeset_r93631.diff, applied upstream
     - remove upstream_changeset_r113848.diff, applied upstream 
     - remove upstream_Build-fixes-for-glib-2.31.diff, applied upstream
+  * Switch to building with ./Tools/Scripts/build-webkit as recommended
+    by upstream
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Jun 2014 21:18:08 +0200
 
